# kinematica

./: README.md
src/kinematica/al5d_pckg/: CMakeLists.txt  package.xml
src/kinematica/al5d_pckg/action/: communicator.action
src/kinematica/al5d_pckg/include/al5d_pckg/: Color.hpp  ConstValues.h  Controller.h  Filter.hpp  MainApplication.hpp  Matrix.hpp  Matrix.inc  MatrixCalculations.h  Programhandler.hpp  Shape.hpp  client.h  hld.h  lld.h  pose.h  state.h
src/kinematica/al5d_pckg/msg/: moveArm.msg
src/kinematica/al5d_pckg/src/: Client.cpp  Color.cpp  Controller.cpp  Filter.cpp  Main.cpp  MainApplication.cpp  MatrixCalculations.cpp  Programhandler.cpp  Shape.cpp  hld.cpp  hld_main.cpp  lld.cpp  pose.cpp
src/kinematica/open_cv/: CMakeLists.txt  package.xml
src/kinematica/open_cv/include/: 2.2
src/kinematica/open_cv/src/: Main.cpp
